overflow fixed

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -16,7 +16,7 @@ $black: #040507;
 }
 .container,
 .container-fluid {
-    // overflow: hidden;
+    overflow: hidden;
     padding: 0;
 }
 body {
@@ -25,7 +25,7 @@ body {
 }
 ul,
 li {
-    // margin: 0;
+    margin: 0;
     padding: 0;
     list-style: none outside;
 }
